# hesso-master-rooftops-latex

./: .gitignore  .pre-commit-config.yaml  404.html  MSE_PosterTemplate_v2025.pptx  Makefile  README.md  bibliography.html  glossary.html  index.html  lists.html  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  thesis.loc  thesis.synctex(busy)  thesis.tex
.github/workflows/: deploy.yml
00-settings/: codestyles.tex  metadata.tex  settings_base.tex  settings_custom.tex
01-head/: 01_titlepage.tex  02_reportinfo.tex  03_preface.tex  04_remerciements.tex  05_abstracts.tex
02-main/: ch1_introduction.tex  ch2_analysis.tex  ch3_design.tex  ch3_modele.tex  ch4_implementation.tex  ch5_conclusions.tex  ch5_validation.tex  ch6_conclusion.tex
03-tail/: bibliography.bib  glossary.tex
03-tail/A1_fondamentaux_ML/: A1_ch1.tex  A1_fondamentaux_ml.tex
03-tail/A2_fondamentaux_energie/: A2_ch1.tex  A2_fondamentaux_en.tex
appendices/: A1-fondamentaux-ml.html  A2-fondamentaux-energie.html
chapters/: 00-resume.html  01-introduction.html  02-analysis.html  03-modele.html  04-implementation.html  05-conclusions.html
docs/: bibliography.md  glossary.md  index.md  lists.md
docs/appendices/: A1-fondamentaux-ml.md  A2-fondamentaux-energie.md
docs/chapters/: 00-resume.md  01-introduction.md  02-analysis.md  03-modele.md  04-implementation.md  05-conclusions.md
overrides/: main.html
search/: search_index.json
site-generator/: convert_thesis.sh  fix_images.py  fix_text.py  glossary_to_md.py  link_glossary.py  numeric-citation-order.csl  preprocess_tex.py  split_combined.py
(+1 files in other folders)
